force-app/main/default/objects/FacilityCostBuilding__c/fields/AmountPurchasingIncludeTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountPurchasingIncludeTaxLocal__c</fullName>
    <formula>PurchasingInvoiceId__r.AmountIncludedTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT PURCHASING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>