force-app/main/default/objects/FacilityCostBuilding__c/fields/AmountPurchasingIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPurchasingIncludeTaxUSD__c</fullName>
    <formula>PurchasingInvoiceId__r.AmountIncludedTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT PURCHASING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>