force-app/main/default/objects/FacilityCostBuilding__c/fields/CostCategory__c.field-meta.xml
<CustomField>
    <fullName>CostCategory__c</fullName>
    <label>COST CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FacilityFixedCost</valueSetName>
    </valueSet>
</CustomField>