force-app/main/default/objects/FacilityCostBuilding__c/fields/FacilityID__c.field-meta.xml
<CustomField>
    <fullName>FacilityID__c</fullName>
    <label>FACILITY ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Facility__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Facility__c</referenceTo>
    <relationshipName>FacilityCostBuilding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>