force-app/main/default/objects/FacilityCostBuilding__c/fields/FacilityMaxCapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>FacilityMaxCapacityCBM__c</fullName>
    <formula>FacilityID__r.CapacityCBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FACILITY MAX CAPACITY(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>