force-app/main/default/objects/FacilityCostBuilding__c/fields/FacilityMaxCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>FacilityMaxCapacityKG__c</fullName>
    <formula>FacilityID__r.CapacityKG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FACILITY MAX CAPACITY(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>