force-app/main/default/objects/FacilityCostBuilding__c/fields/MinCBMCostBasedOnMaxCapacity__c.field-meta.xml
<CustomField>
    <fullName>MinCBMCostBasedOnMaxCapacity__c</fullName>
    <label>MIN COST BASED ON MAX CAPACITY(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>