force-app/main/default/objects/FacilityCostBuilding__c/fields/MinKGCostBasedOnMaxCapacity__c.field-meta.xml
<CustomField>
    <fullName>MinKGCostBasedOnMaxCapacity__c</fullName>
    <label>MIN COST BASED ON MAX CAPACITY(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>