force-app/main/default/objects/FacilityCostBuilding__c/fields/NumberOfUnit__c.field-meta.xml
<CustomField>
    <fullName>NumberOfUnit__c</fullName>
    <label>NUMBER OF UNIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>