force-app/main/default/objects/FacilityCostBuilding__c/fields/PurchasingInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>PurchasingInvoiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PURCHASING INVOICE ID</label>
    <referenceTo>PurchasingInvoice__c</referenceTo>
    <relationshipLabel>FACILITY COST BUILDING</relationshipLabel>
    <relationshipName>FacilityCostBuilding</relationshipName>
    <type>Lookup</type>
</CustomField>