force-app/main/default/objects/FacilityCostBuilding__c/fields/TotalCostPerMonth__c.field-meta.xml
<CustomField>
    <fullName>TotalCostPerMonth__c</fullName>
    <label>TOTAL COST PER MONTH</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>