force-app/main/default/objects/FacilityCostBuilding__c/recordTypes/FixedCost.recordType-meta.xml
<RecordType>
    <fullName>FixedCost</fullName>
    <active>true</active>
    <label>Fixed Cost</label>
</RecordType>