force-app/main/default/objects/FacilityCostBuilding__c/recordTypes/VariableCost.recordType-meta.xml
<RecordType>
    <fullName>VariableCost</fullName>
    <active>true</active>
    <label>Variable Cost</label>
</RecordType>