force-app/main/default/objects/FacilityCostBuilding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FacilityCostName__c</columns>
    <columns>FacilityID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TotalCostPerMonth__c</columns>
    <columns>FacilityMaxCapacityCBM__c</columns>
    <columns>FacilityMaxCapacityKG__c</columns>
    <columns>MinCBMCostBasedOnMaxCapacity__c</columns>
    <columns>MinKGCostBasedOnMaxCapacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>